- Added a tab to display equipped items on the blacksmith - (Potentially) fixed issue with contextual menu on iPhone devices, now, doing a longpress on mobile iphone devices should display the context menu for the item (equip,repair,destroy,etc...) - For convenience added in the contextual menu a quick way to repair an item - And more ;)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -301,7 +301,7 @@ ngb-tooltip-window {
 
 .item-inventory {
   @include media-breakpoint-down(sm) {
-    padding: 0px !important;
+    padding: 10px 0px !important;
   }
 }
 
